# artifacts/api-server/src/routes/index.ts
@@ -8,6 +8,7 @@ import alertsRouter from "./alerts";
 import resetRequestsRouter from "./reset-requests";
 import reviewsRouter from "./reviews";
 import restaurantsRouter from "./restaurants";
+import playersRouter from "./players";
 
 const router: IRouter = Router();
 
@@ -20,5 +21,6 @@ router.use("/activities", activitiesRouter);
 router.use("/alerts", alertsRouter);
 router.use("/reset-requests", resetRequestsRouter);
 router.use("/restaurants", restaurantsRouter);
+router.use("/players", playersRouter);
 
 export default router;
